Bug 28079 - adapt to kernel 5.14 task_struct.__state change
Summary: adapt to kernel 5.14 task_struct.__state change
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
: 28107 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-12 15:09 UTC by Stan Cox
Modified: 2021-08-19 17:59 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stan Cox 2021-07-12 15:09:10 UTC
The 5.14 kernel has unsigned int  __state whereas the 5.13 kernel has volatile long state which results in an error of the form:

runtime/stp_utrace.c:38:14: error: ‘struct task_struct’ has no member named ‘state’; did you mean ‘__state’?`
Comment 1 William Cohen 2021-07-20 16:03:39 UTC
*** Bug 28107 has been marked as a duplicate of this bug. ***
Comment 2 Stan Cox 2021-08-19 17:59:13 UTC
commit: a29f65d57