PR28079: Adapt to kernel 5.14 task_struct.__state change

Use signal_wake_up_state for the 5.14 kernel which changed volatile long state to unsigned int __state.